--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: InterTight;
+  src: url(InterTight-VariableFont_wght.ttf);
+    font-weight: normal;
+}
+    
 * {
     margin: 0;
     padding: 0;
