--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 @font-face {
-  font-family: InterTight;
-  src: url(InterTight-VariableFont_wght.ttf);
+    font-family: 'InterTight';
+    src: url('assets/Inter-VariableFont_slnt,wght.ttf') format('truetype');
     font-weight: normal;
 }
-    
 * {
     margin: 0;
     padding: 0;
