--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@
     font-size: 16px;
     min-height: 100px;
     resize: vertical;
+    font-family: 'InterTight', sans-serif;
 }
 
 .reveal-btn {
