--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #c4e0ff;
+    background: #faf9f1;
     padding: 20px;
     touch-action: none;
   color: #333333;
