--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@
     background: #c4e0ff;
     margin-bottom: 15px;
     font-size: 23px;
-    min-height: 63px;
+    height: 63px;
     resize: none;
     font-family: 'InterTight', sans-serif;
 }
