--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,11 @@
     position: relative;
     cursor: none;
 }
+h1 {
+    font-size:160px;
+    color:#c4e0ff;
+    text-align:left;
+    line-height:170px;
 p {
  text-align: left;
     font-size: 18px;
