--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ p {
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(255,255,255,0.1);
     object-fit: contain;
+    margin-bottom: -19px;
 }
 
 .magnifying-glass {
