--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,7 @@
     flex-wrap: nowrap;
 }
 .left-col{
-    width:50%;
-}
+    width:50%;}
 .artwork-frame {
     width: 90%;
     max-width: 500px;
@@ -38,12 +37,13 @@ h1 {
     line-height: 1em;
     width: 33vw;
     font-weight: normal;
-    margin-bottom: -28px;
+    margin-bottom: 20px;
 }
 p {
  text-align: left;
     font-size: 18px;
     padding-bottom: 20px;
+    padding-right:20px;
  }
 
 .artwork {
