--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ h1 {
     font-size: 2.5rem;
     color: #c4e0ff;
     text-align: left;
-    line-height: 1.2;
+    line-height: 1em;
     font-weight: normal;
     margin-bottom: 20px;
 }
@@ -157,13 +157,13 @@ p {
     }
 
     h1 {
-        font-size: 3vw;
-        width: 33vw;
+        font-size: 58px;
+        width: 100%;
     }
 
     p {
         font-size: 18px;
-        padding-right: 20em;
+        padding-right: 20%;
     }
 
     .artwork-frame {
