--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ p {
 }
 .answers-container {
     display: flex;
+    flex-direction:row;
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 20px;
