--- a/styles.css
+++ b/styles.css
@@ -81,15 +81,16 @@ p {
 .magic-input {
     width: 100%;
     padding: 15px;
-    border-radius: 10px;
-    border: 2px solid #4a4a4a;
-    background: #c4e0ff;
+    border-radius: 17px;
+    border: 2px solid #c4e0ff;
+    background: #faf9f2;
     margin-bottom: 15px;
     font-size: 20px;
-    height: 58px;
+    height: 63px;
     resize: none;
     font-family: 'InterTight', sans-serif;
     overflow: hidden;
+    line-height: 1.51em;
 }
 
 .reveal-btn {
