--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
 
 h1 {
     font-size: 2.5rem;
-    color: #c4e0ff;
+    color: #87bafa;
     text-align: left;
     line-height: 1em;
     font-weight: normal;
@@ -50,6 +50,7 @@ p {
     font-size: 16px;
     padding-bottom: 44px;
     padding-right: 0;
+    color:#333333;
 }
 
 .artwork {
