--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,25 @@
 @font-face {
     font-family: 'InterTight';
-    src: url('assets/Inter-VariableFont_slnt,wght.ttf') format('truetype');
-    font-weight: 100 900;
+    src: url('assets/InterTight-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'InterTight-Italic';
+    src: url('assets/InterTight-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'InterTight-Semibold';
+    src: url('assets/InterTight-SemiBold.ttf') format('truetype');
+    font-weight: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'InterTight-SemiboldItalic';
+    src: url('assets/InterTight-SemiBoldItalic.ttf') format('truetype');
+    font-weight: normal;
     font-display: swap;
 }
 
@@ -35,6 +53,14 @@
     padding-bottom: clamp(1.5rem, 4vw, 2.5rem);
 }
 
+.semibold {
+  font-family: 'InterTight-Semibold';
+}
+
+.italic {
+  font-family: 'InterTight-Italic';
+}
+
 .artwork-frame {
     width: 100%;
     max-width: min(500px, 90vw);
@@ -44,10 +70,10 @@
 }
 
 h1 {
-    font-size: clamp(2rem, 5vw, 4.1rem);
+    font-size: clamp(2rem, 5.4em, 4.1rem);
     color: var(--primary-color);
     text-align: left;
-    line-height: 1.1;
+    line-height: 1.02;
     font-weight: normal;
     margin-bottom: clamp(1rem, 3vw, 1.25rem);
 }
@@ -55,10 +81,10 @@ h1 {
 p {
     text-align: left;
     font-size: clamp(1rem, 2vw, 1.125rem);
-    padding-bottom: clamp(1.5rem, 4vw, 2.75rem);
+    padding-bottom: 15px;
     padding-right: min(20%, 6rem);
     color: var(--secondary-color);
-    line-height: 1.2;
+    line-height: 1.3;
 }
 
 .artwork {
@@ -89,11 +115,11 @@ p {
 .magic-input {
     width: 100%;
     padding: 0.9375rem;
-    border-radius: 1.0625rem;
+    border-radius: 13px;
     border: 2px solid var(--gradient-start);
     background: var(--background-color);
-    margin-bottom: 0.9375rem;
-    font-size: clamp(1rem, 2vw, 1.25rem);
+    margin-bottom: 7px;
+    font-size: clamp(1rem, 2vw, 1.125rem);
     height: 3.9375rem;
     resize: none;
     overflow: hidden;
@@ -120,7 +146,7 @@ background: #c4e0ff;
     border-radius: 6.25rem;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.07);
     transform-origin: center;
-    font-size: clamp(1.125rem, 2.5vw, 1.4375rem);
+    font-size: clamp(1rem, 2vw, 1.125rem);
     width: fit-content;
     flex: 0 1 auto;
     background: linear-gradient(45deg, var(--gradient-end), var(--gradient-start));
@@ -136,12 +162,12 @@ background: #c4e0ff;
 .tooltip-container {
     position: relative;
     display: inline-block;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
-.question-icon {
-    width: 24px;
-    height: 24px;
+.plus-icon {
+    width: 38px;
+    height: 38px;
     cursor: pointer;
 }
 
@@ -151,20 +177,19 @@ background: #c4e0ff;
     left: 100%;
     top: 50%;
     transform: translateY(-50%);
-    background: white;
-    padding: 1rem;
-    border-radius: 8px;
+    background: #c4e0ff;
+    padding: 12px 25px;
+    border-radius: 100px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     width: max-content;
-    max-width: 250px;
     margin-left: 10px;
     z-index: 1000;
+    font-size: clamp(1rem, 2vw, 1.125rem);
 }
 
 .tooltip-container:hover .tooltip-text {
     visibility: visible;
 }
-
 
 @keyframes sparkleOut {
     0% { transform: scale(0); opacity: 1; }
