--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,9 @@ h1 {
     font-weight: normal;
     margin-bottom: clamp(1rem, 3vw, 1.25rem);
 }
+h2{
+    padding-right: min(20%, 6rem);
+}
 
 p {
     text-align: left;
